--- a/client/index.html
+++ b/client/index.html
@@ -240,6 +240,7 @@
           <script src="components/layout/navbar/sub-navbar.controller.js"></script>
           <script src="components/widgets/adress-autocomplete/adress-autocomplete.directive.js"></script>
           <script src="components/widgets/confirm-password/confirm.password.directive.js"></script>
+          <script src="components/widgets/distance-calculator/distance.calculator.service.js"></script>
           <script src="components/widgets/fileupload/fileupload.js"></script>
           <script src="components/widgets/fileupload/ngthumb.js"></script>
           <script src="components/widgets/modal/modal.service.js"></script>
