--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -6,7 +6,6 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 my-profile">
           <h2> You </h2>
-
           <div class="white-box buttons-box">
 
             <a class="btn btn-primary" ui-sref="dashboard.addNewRoom">Post Available Room</a>
@@ -73,7 +72,7 @@
                     <h4 class="media-heading user-name">
                       {{looking.relatedUserId.firstname}} {{looking.relatedUserId.lastname}}
                     </h4>
-                    <p class="quote">{{looking.relatedUserId.aboutMe}}</p>
+                    <p class="quote" ng-if="looking.relatedUserId.aboutMe">{{looking.relatedUserId.aboutMe}}</p>
                   </div>
                   <ul class="profile-info">
                     <li>{{looking.maxMonthlyRent | currency}}</li>
@@ -103,46 +102,46 @@
             <a class="pull-right btn-rented-event view-all" ui-sref="dashboard.around">View All</a>
           </div>
 
-          <h2 class="section-title"> My Posts</h2>
+          <!--<h2 class="section-title"> My Posts</h2>-->
 
-          <div class="white-box my-listings">
+          <!--<div class="white-box my-listings">-->
 
-            <slick dots="true" class="slider row" slides-to-show="1" slides-to-scroll="1">
+            <!--<slick dots="true" class="slider row" slides-to-show="1" slides-to-scroll="1">-->
 
-              <!-- start list box -->
-              <div class="list-item">
-                <div class="row">
-                  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="picture">
-                      <img src="http://lorempixel.com/400/250/city/3">
-                    </div>
-                  </div>
+              <!--&lt;!&ndash; start list box &ndash;&gt;-->
+              <!--<div class="list-item">-->
+                <!--<div class="row">-->
+                  <!--<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">-->
+                    <!--<div class="picture">-->
+                      <!--<img src="http://lorempixel.com/400/250/city/3">-->
+                    <!--</div>-->
+                  <!--</div>-->
 
-                  <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-                    <div class="info">
-                      <span class='value'> $700 mo</span>
-                      <span class='address'> 122 Balboa Ave. Unit C, San Diego</span>
-                      <span class="elapsed-time">
-                        <i class="fa fa-clock-o"></i> Posted on April 14th - edited 2hs ago
-                      </span>
-                    </div>
-                    <div class="edit">
-                      <span class='text'>Edit</span>
-                      <a  class="bubble">
-                        <i class="fa fa-pencil"></i>
-                      </a>
-                    </div>
-                  </div>
+                  <!--<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">-->
+                    <!--<div class="info">-->
+                      <!--<span class='value'> $700 mo</span>-->
+                      <!--<span class='address'> 122 Balboa Ave. Unit C, San Diego</span>-->
+                      <!--<span class="elapsed-time">-->
+                        <!--<i class="fa fa-clock-o"></i> Posted on April 14th - edited 2hs ago-->
+                      <!--</span>-->
+                    <!--</div>-->
+                    <!--<div class="edit">-->
+                      <!--<span class='text'>Edit</span>-->
+                      <!--<a  class="bubble">-->
+                        <!--<i class="fa fa-pencil"></i>-->
+                      <!--</a>-->
+                    <!--</div>-->
+                  <!--</div>-->
 
-                </div>
-              </div>
-              <!-- end list box -->
-            </slick>
-            <hr>
-          </div>
+                <!--</div>-->
+              <!--</div>-->
+              <!--&lt;!&ndash; end list box &ndash;&gt;-->
+            <!--</slick>-->
+            <!--<hr>-->
+          <!--</div>-->
 
 <!--my lookings just to showcase-->
-          <h2 class="section-title"> My lookings</h2>
+          <h2 class="section-title"> My Posts</h2>
           <div class="white-box my-listings" >
             <h2 ng-if="!dashboard.userLookings.length" >
               You don't have posted lookings yet.
