--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -54,11 +54,12 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="form-group">
+<pre>{{editProfile.tempEducation|json}}</pre>
           <label for="educationCenterName">Education centre name</label>
           <select id="educationCenterName" class="form-control"
                   ng-model="editProfile.tempEducation.educationCenterName"
                   ng-options="university.name for university in editProfile.universitiesList">
-            <option value="">{{editProfile.tempEducation.educationCenterName}}</option>
+            <option value=""></option>
           </select>
         </div>
 
@@ -111,20 +112,23 @@
   <div class="white-box">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <label for="streetAddress">Address</label>
-        <input  type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" address-autocomplete="editProfile.tempAddress.streetAddress" ng-model="editProfile.tempAddress.streetAddress.streetAddress"/>
+        <label for="streetAddress">Address lookup</label>
+        <input  type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" address-autocomplete="editProfile.tempAddress.streetAddress"/>
+
+        <label for="streetName">Street name</label>
+        <input type="text" id="streetName" name="streetName" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress.streetAddress" readonly/>
 
         <label for="streetNumber">Number</label>
-        <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetAddress.streetNumeric"/>
+        <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetAddress.streetNumeric" readonly/>
 
         <label for="zip">Zip code</label>
-        <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.streetAddress.zip"/>
+        <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.streetAddress.zip" readonly/>
 
         <label for="city">City</label>
-        <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.streetAddress.city"/>
+        <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.streetAddress.city" readonly/>
 
         <label for="city">State</label>
-        <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.streetAddress.state"/>
+        <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.streetAddress.state" readonly/>
 
         <label for="apt">Apt</label>
         <input type="number" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="editProfile.tempAddress.streetAddress.apt"/><br/>
