--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -1,4 +1,5 @@
 <div ui-view="">
+  <div class="main-wrapper">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -39,5 +40,6 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 </div>
