--- a/client/app/roomDetail/roomDetail.html
+++ b/client/app/roomDetail/roomDetail.html
@@ -56,6 +56,7 @@
     <li>Parking: {{room.roomDetail.roomDetails.parkingAvailable}}</li>
     <li>Furnished: {{room.roomDetail.roomDetails.furnished}}</li>
     <li>Smoking Allowed: {{room.roomDetail.roomDetails.smokingAllowed}}</li>
+    <li>Unit area: {{room.roomDetail.propertyDetails.livingAreaSqFt}} square feet</li>
   </ul>
 
 </div>
