--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -4,7 +4,7 @@
   <div class="container available-rooms">
     <div class="row">
       <div class="page-header">
-        <h2> Available Rooms </h2>
+        <h2> Available Rooms   need selection sorted by (newest, price, ??)  since sort by price is default</h2>
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 room" ng-repeat="room in rooms.availableRooms">
