--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -4,7 +4,7 @@
   <div class="container available-rooms">
     <div class="row">
       <div class="page-header">
-        <h2> Available Rooms   need selection sorted by (newest, price, ??)  since sort by price is default</h2>
+        <h2> Available Rooms   need selection sorted by (newest, price, my rooms)  since sort by newest is default</h2>
       </div>
       <!--<slick dots="true" class="slider row" init-onload="true" data="rooms.availableRooms" slides-to-show="4" slides-to-scroll="4" responsive="rooms.breakpoints.availableRooms">-->
         <div class="row">
